--- a/activities.html
+++ b/activities.html
@@ -5,50 +5,36 @@
 </head>
 <body>
 	<header>
-		<nav>
-			<ul>
-				<li><a href="index.html">首頁</a></li>
-				<li><a href="knowledge.html">環保知識</a></li>
-				<li><a href="environmental_activities.html">環保活動</a></li>
-				<li><a href="environmental_challenges.html">環保挑戰</a></li>
-				<li><a href="environmental_resources.html">環保資源</a></li>
-				<li><a href="contact_us.html">聯絡我們</a></li>
-			</ul>
-		</nav>
+		
 	</header>
 	<main>
 		<h1>環保活動</h1>
-		<nav>
-			<ul>
-				<li><a href="#list">活動列表</a></li>
-				<li><a href="#detail">活動詳情</a></li>
-				<li><a href="#register">報名參加</a></li>
-			</ul>
-		</nav>
+		
 		<section id="list">
-			<h2>活動列表</h2>
-			<ul>
-				<li><a href="#event1">綠色生活講座</a></li>
-				<li><a href="#event2">海灘清潔活動</a></li>
-				<li><a href="#event3">植樹造林志工活動</a></li>
-			</ul>
+			
+			
 		</section>
 		<section id="detail">
-			<h2>活動詳情</h2>
+			
 			<article id="event1">
 				<h3>綠色生活講座</h3>
 				<p>日期：2023年10月15日</p>
 				<p>地點：台北市信義區</p>
 				<p>活動內容：講解環保知識，介紹綠色生活方式，分享實踐環保的經驗。</p>
+<br />
+
 			</article>
 			<article id="event2">
 				<h3>海灘清潔活動</h3>
 				<p>日期：2023年11月5日</p>
 				<p>地點：基隆市中正區</p>
 				<p>活動內容：清理海灘垃圾，提高環保意識，保護海洋生態。</p>
+<br />
+
 			</article>
 			<article id="event3">
 				<h3>植樹造林志工活動</h3>
 				<p>日期：2023年12月3日</p>
 				<p>地點：新北市三峽區</p>
-				<p>活動內容：
+				<p>活動內容：栽種綠色植物，明白與自然共存的重要性。
+<br />
