--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <br />
 
 
-<p><span class="orangetext">3.苗栗縣禁用「一次用塑膠杯」明年7月上路</span>
+<p><span class="orangetext">3.苗栗縣明年禁用「一次用塑膠杯」</span>
 <br />
          發佈單位：廢棄物管理科
 
@@ -93,7 +93,7 @@
 <br />
           <br />
 
-<p><span class="orangetext">5.透過校園宣導活動，深根學童土水保育觀念</span>
+<p><span class="orangetext">5.校園宣導深根學童土水保育觀念</span>
 <br />
         發佈單位：水質保護科 
 
