--- a/activities.html
+++ b/activities.html
@@ -2,80 +2,83 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title></title>
+<title>環保活動</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
+<style>
+body {
+    color: black;
+}
+h1 {
+    text-align: center;
+    font-size: 80px; /* 縮小3倍 */
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+h3 {
+    font-weight: bold;
+}
+#main_img {
+    width: 780px;
+    height: 120px;
+}
+</style>
 </head>
 <body>
 <div id="wrapper">
   <div id="content">
     <div id="header">
       <div id="logo">
-        <h1></h1>
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<style>
-		body {
-			color: white; /* 設定全文文字為白色 */
-		}
-	</style>
-</head>
-<body>
-	<header>
-		
-	</header>
-	<main>
-		<h1></h1>
-		
-		<section id="list">
-			
-			
-		</section>
-		<section id="detail">
-			
-			<article id="event1">
+        <img id="main_img" src="images/main_img.jpg" alt="Main Image">
+      </div>
+      <h1>環保活動</h1>
+    </div>
+    <header></header>
+    <main>
+      <h1></h1>
+      <section id="list"></section>
+      <section id="detail">
+        <article id="event1">
 <br />
 <br />
+          <h3>綠色生活講座</h3>
+          <p>日期：2023年10月15日</p>
+          <p>地點：台北市信義區</p>
+          <p>活動內容：講解環保知識，介紹綠色生活方式，分享實踐環保的經驗。</p>
 <br />
-				<h3>綠色生活講座</h3>
-				<p>日期：2023年10月15日</p>
-				<p>地點：台北市信義區</p>
-				<p>活動內容：講解環保知識，介紹綠色生活方式，分享實踐環保的經驗。</p>
-				<br />
-				<img src="images/5.jpg" alt="5" width="500" height="300">
-				<br />
-				<br />
-			</article>
-			<article id="event2">
-				<h3>海灘清潔活動</h3>
-				<p>日期：2023年11月5日</p>
-				<p>地點：基隆市中正區</p>
-				<p>活動內容：清理海灘垃圾，提高環保意識，保護海洋生態。</p>
-				<br />
-				<img src="images/6.jpg" alt="6" width="500" height="300">
-				<br />
-				<br />
-			</article>
-			<article id="event3">
-				<h3>植樹造林志工活動</h3>
-				<p>日期：2023年12月3日</p>
-				<p>地點：新北市三峽區</p>
-				<p>活動內容：栽種綠色植物，明白與自然共存的重要性。</p>
-				<br />
-				<img src="images/7.jpeg" alt="7" width="500" height="300">
-				<br />
-				<br />
-			</article>
-		</section>
-	</main>
+          <img src="images/5.jpg" alt="5" width="500" height="300">
+<br />
+
+        </article>
+        <article id="event2">
+
+<br />
+          <h3>海灘清潔活動</h3>
+          <p>日期：2023年11月5日</p>
+          <p>地點：基隆市中正區</p>
+          <p>活動內容：清理海灘垃圾，提高環保意識，保護海洋生態。</p>
+<br />
+          <img src="images/6.jpg" alt="6" width="500" height="300">
+
+<br />
+
+        </article>
+        <article id="event3">
+<br />
+
+          <h3>植樹造林志工活動</h3>
+          <p>日期：2023年12月3日</p>
+          <p>地點：新北市三峽區</p>
+          <p>活動內容：栽種綠色植物，明白與自然共存的重要性。</p>
+<br />
+          <img src="images/7.jpeg" alt="7" width="500" height="300">
+<br />
+<br />
+        </article>
+      </section>
+    </main>
+  </div>
+</div>
 </body>
 </html>
