--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
  </div>
 
     <div id="bottom">
-      <div id="email"><a href="mailto:loveearth@gmail.com">loveearth@gmail.com</a></div>
+      <div id="email"><a href="mailto:we.are.llyz@gmail.com">we.are.llyz@gmail.com.com</a></div>
       <div id="validtext">
         <p>Valid <a href="http://validator.w3.org/check?uri=referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a></p>
       </div>
