--- a/knowledge.html
+++ b/knowledge.html
@@ -2,30 +2,76 @@
 <html>
 <head>
 	<title>環保知識</title>
+	<style>
+		body {
+		    background-image: url('images/main_img.jpg');
+		    background-size: cover;
+		    background-repeat: no-repeat;
+		    color: black;
+		}
+		h1 {
+		    text-align: center;
+		    font-size: 60px;
+		    position: absolute;
+		    top: 0;
+		    left: 50%;
+		    transform: translate(-50%, 0);
+		    color: #008000; /* 深綠色 */
+		}
+		main {
+			background-color: white;
+			padding: 20px;
+			margin: 50px;
+			border-radius: 10px;
+			opacity: 0.9;
+		}
+		section {
+			margin-bottom: 20px;
+		}
+	</style>
 </head>
 <body>
-	
-	<main>
-		<h1>環保知識</h1>
-		
-		<section id="practice">
-			<h2>環保實踐</h2>
-			<p>在日常生活中，我們可以透過以下方式來實踐環保：</p>
-			<ul>
-				<li>節約用水，例如修理漏水的水龍頭、使用節水型馬桶。</li>
-				<li>減少使用塑膠袋，可以使用環保袋或自備購物袋。</li>
-				<li>垃圾分類，將可回收物、有害垃圾和一般垃圾分開收集。</li>
-			</ul>
-		</section>
-		<section id="reduce">
-			<h2>減廢方法</h2>
-			<p>以下是一些減廢的方法：</p>
-			<ul>
-				<li>減少使用一次性產品，例如使用可重複使用的水瓶、餐具和咖啡杯。</li>
-				<li>購買少包裝的商品，選擇裸買蔬果，減少包裝廢棄物。</li>
-				<li>選擇使用環保清潔用品，減少對環境的污染。</li>
-			</ul>
-		</section>
-		<section id="renewable">
-			<h2>再生能源</h2>
-			<p>再生能源是可持續發展的能源來源，以下是一些再生能源的例
+	<div id="wrapper">
+	  <div id="content">
+	    <div id="header">
+	      <div id="logo">
+	        <h1>環保知識</h1>
+	      </div>
+	    </div>
+	    <main>
+
+  <h1>環保知識</h1>
+			<section id="practice">
+				<h2>環保實踐</h2>
+				<p>在日常生活中，我們可以透過以下方式來實踐環保：</p>
+				<ul>
+					<li>節約用水，例如修理漏水的水龍頭、使用節水型馬桶。</li>
+					<li>減少使用塑膠袋，可以使用環保袋或自備購物袋。</li>
+					<li>垃圾分類，將可回收物、有害垃圾和一般垃圾分開收集。</li>
+				</ul>
+			</section>
+			<section id="reduce">
+	<br />			
+<h2>減廢方法</h2>
+				<p>以下是一些減廢的方法：</p>
+				<ul>
+					<li>減少使用一次性產品，例如使用可重複使用的水瓶、餐具和咖啡杯。</li>
+					<li>購買少包裝的商品，選擇裸買蔬果，減少包裝廢棄物。</li>
+					<li>選擇使用環保清潔用品，減少對環境的污染。</li>
+				</ul>
+			</section>
+			<section id="renewable">
+				
+<br />
+<h2>再生能源</h2>
+				<p>再生能源是可持續發展的能源來源，以下是一些再生能源的例子。</p>
+
+<br />
+<br />
+<br />
+			</section>
+		</main>
+	  </div>
+	</div>
+</body>
+</html>
