--- a/activities.html
+++ b/activities.html
@@ -76,11 +76,13 @@ h3 {
 <br />
 <br />
 <br />
-<br />
-<br />
-        </article>
-      </section>
-    </main>
+
+         <br />
+
+           <br />
+         
+
+    </div>
   </div>
 </div>
 </body>
