--- a/knowledge.html
+++ b/knowledge.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head> <title>環保知識</title>
-
-
+<head>
+    <title>環保知識</title>
     <style>
         body {
             background-image: url('images/main_img.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             color: black;
+            margin: 0;
+            padding: 0;
         }
         h1 {
             text-align: center;
             font-size: 60px;
             position: absolute;
-            top: 0;
+            top: -5%; /* Adjust the top position to move the title higher */
             left: 50%;
-            transform: translate(-50%, 0);
+            transform: translateX(-50%);
             color: #008000; /* 深綠色 */
+            z-index: 9999;
         }
         main {
             background-color: white;
@@ -29,21 +31,25 @@
         section {
             margin-bottom: 20px;
         }
-<h1>環保知識</h1>
     </style>
 </head>
 <body>
+    
+<br />
+<br />
+<h1>環保知識</h1>
     <div id="wrapper">
         <div id="content">
-            <div id="header">
-                <div id="logo">
-                    <h1>環保知識</h1>
-                </div>
-            </div>
+            <!-- Rest of your content remains unchanged -->
+        </div>
+    </div>
+</body>
+</html>
+
+
             <main>
                 <section id="practice">
                    
-<br />
  <h2>環保實踐</h2>
                     <p>在日常生活中，我們可以透過以下方式來實踐環保：</p>
                     <ul>
@@ -66,9 +72,8 @@
                     <br />
 <h2>再生能源</h2>
                     <p>再生能源是可持續發展的能源來源，以下是一些再生能源的例子。</p>
-<br />
-<br />
-<br />
+
+
 
                 </section>
             </main>
