--- a/activities.html
+++ b/activities.html
@@ -12,15 +12,14 @@ h1 {
     text-align: center;
     font-size: 60px;
     position: absolute;
-    top: 0;
+    top: 3%;
     left: 50%;
     transform: translate(-50%, 0);
     color: #008000; /* 深綠色 */
-
-
 }
 h3 {
     font-weight: bold;
+    font-size: 20px;
 }
 #main_img {
     width: 780px;
@@ -45,8 +44,8 @@ h3 {
         <article id="event1">
 <br />
 <br />
-          <h3>綠色生活講座</h3>
-          <p>日期：2023年10月15日</p>
+          <h3><a href="https://forms.gle/Enp232cLMUbx317b7" target="_blank">綠色生活講座</a></h3>
+          <p>日期：2023年11月15日</p>
           <p>地點：台北市信義區</p>
           <p>活動內容：講解環保知識，介紹綠色生活方式，分享實踐環保的經驗。</p>
 <br />
@@ -55,9 +54,10 @@ h3 {
         <article id="event2">
 
 <br />
-          <h3>海灘清潔活動</h3>
-          <p>日期：2023年11月5日</p>
-          <p>地點：基隆市中正區</p>
+<h3><a href="https://forms.gle/YZNJ4q93GxwVvmK86" target="_blank">海灘清潔活動</a></h3>
+         
+          <p>日期：2023年12月5日</p>
+          <p>地點：基隆市中正區幸福路777號</p>
           <p>活動內容：清理海灘垃圾，提高環保意識，保護海洋生態。</p>
 <br />
           <img src="images/6.jpg" alt="6" width="500" height="300">
@@ -65,9 +65,9 @@ h3 {
         <article id="event3">
 
 <br />
-          <h3>植樹造林志工活動</h3>
-          <p>日期：2023年12月3日</p>
-          <p>地點：新北市三峽區</p>
+          <h3><a href="https://forms.gle/6eK3z19oBWyC5iYXA" target="_blank">植樹造林志工活動</a></h3>
+          <p>日期：2023年12月12日</p>
+          <p>地點：新北市三峽區光光街11號</p>
           <p>活動內容：栽種綠色植物，明白與自然共存的重要性。</p>
 
 <br />
