--- a/contact_us.html
+++ b/contact_us.html
@@ -12,7 +12,7 @@ h1 {
     text-align: center;
     font-size: 60px;
     position: absolute;
-    top: 0;
+    top: 3%;
     left: 50%;
     transform: translate(-50%, 0);
     color: #008000; /* 深綠色 */
