--- a/activities.html
+++ b/activities.html
@@ -75,14 +75,18 @@ h3 {
 <br />
 <br />
 <br />
-<br />
 
          <br />
 
            <br />
          
 
-    </div>
+
+<div id="bottom">
+ 
+  
+ <img id="main_img_bottom" src="images/16.jpg" alt="Main Image" width="780" height="30" style="display: block; margin: 0 auto;">
+  </div>
   </div>
 </div>
 </body>
