--- a/contact_us.html
+++ b/contact_us.html
@@ -75,9 +75,12 @@ h3 {
 <h2>聯絡資訊</h2>
 			<p>以下是我們的聯絡資訊：</p>
 			<ul>
-				<li>電話：0800-000-666</li>
-				<li>地址：苗栗縣苗栗市南勢里聯大路888888號</li>
-				<li>電子郵件：we.are.llyz@gmail.com</li>
+				<li>電話：<a href="tel:0800000666">0800-000-666</a></li>
+
+				<li>地址：<a href="https://www.google.com/maps/place/苗栗縣苗栗市南勢里聯大路888888號" target="_blank">苗栗縣苗栗市南勢里聯大路888888號</a></li>
+
+				<li>電子郵件：<a href="mailto:we.are.llyz@gmail.com">we.are.llyz@gmail.com</a></li>
+ 
 <br />
 <br />
 <br />
@@ -85,8 +88,17 @@ h3 {
 <br />
 <br />
 <br />
-<br />
-<br />
+
+
+
+<div id="bottom">
+  <img id="main_img_bottom" src="images/16.jpg" alt="Main Image" width="780" height="30" style="display: block; margin: 0 auto; margin-left: -40px;">
+</div>
+
+
+</div>
+
+
 
 			</ul>
 		</section>
