--- a/index.html
+++ b/index.html
@@ -181,13 +181,19 @@
  </div>
  </div>
 
-    <div id="bottom">
-      <div id="email"><a href="mailto:we.are.llyz@gmail.com">we.are.llyz@gmail.com.com</a></div>
-      <div id="validtext">
-        <p>Valid <a href="http://validator.w3.org/check?uri=referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a></p>
-      </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+   <div id="bottom">
+ 
+  
+ <img id="main_img_bottom" src="images/16.jpg" alt="Main Image" width="780" height="30" style="display: block; margin: 0 auto;">
   </div>
 </div>
-</body>
-</html>
